--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					</form>
 				</div>
 			</div>
-      <a href="index.html"><img src="images/logo.png" class="imglog" width="127px" height="110px"></a>
+      <span><a href="index.html"><img src="images/logo.png" class="imglog" width="127px" height="110px"></a></span>
         <ul class="nav nav-tabs left">
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">VR Foundation</a>
@@ -416,7 +416,8 @@
    <footer>
      <div class="row">
       <div class="col-sm-6">
-        <p>© 2010−2018 VR Foundation, Inc. <br> All rights reserved. VR Foundation™, and the “VR Foundation“ logo, <br>are trademarks of VR Foundation, Inc.</p>
+        <p>© 2010−2018 VR Foundation, Inc. <br>
+All rights reserved. VR Foundation™, and the “VR Foundation“ logo, <br>are trademarks of VR Foundation, Inc.</p>
       </div>
       <div class="col-sm-6">
         <div class="col-sm-8">
