--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					</form>
 				</div>
 			</div>
-      <span><a href="index.html"><img src="images/logo.png" width="127" height="110"></a></span>
+      <span><a href="index.html"><img src="images/logo.jpg" width="127" height="110"></a></span>
         <ul class="nav nav-tabs left">
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">VR Foundation</a>
