--- a/meet the team.html
+++ b/meet the team.html
@@ -22,7 +22,7 @@
 					</form>
 				</div>
 			</div>
-      <a href="index.html"><img src="images/logo.png" class="imglog" width="127px" height="110px"></a>
+      <a href="index.html"><img src="images/logo.jpg" width="127" height="110" class="imglog"></a>
         <ul class="nav nav-tabs left">
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">VR Foundation</a>
@@ -170,24 +170,34 @@
        </div>
        <div class="directors">
          <figure class="sign">
-           <p><img src="images/mem-1.png" width="182" height="182" alt="Mr. Dmitry Aksenov "></p><br>
-           <figcaption>Mr. Dmitry Aksenov  <br>MSc, MBA<br><span class="path">Founder<br><br></span></figcaption>
+           <p><img src="images/mem-1.png" width="182" height="182" alt="Mr. Dmitry Aksenov
+"></p><br>
+           <figcaption>Mr. Dmitry Aksenov
+ <br>MSc, MBA<br><span class="path">Founder<br><br></span></figcaption>
          </figure>
          <figure class="sign">
-           <p><img src="images/mem-2.png" width="182" height="182" alt="Prof. Torello Lotti "></p><br>
-           <figcaption>Prof. Torello Lotti <br>MD<br><span class="path">Chair of the Board, co-<br>founder</span></figcaption>
+           <p><img src="images/mem-2.png" width="182" height="182" alt="Prof. Torello Lotti
+"></p><br>
+           <figcaption>Prof. Torello Lotti
+<br>MD<br><span class="path">Chair of the Board, co-<br>founder</span></figcaption>
          </figure>
          <figure class="sign">
-           <p><img src="images/mem-3.png" width="182" height="182" alt="Prof. Jana Hercogova "></p><br>
-           <figcaption>Prof. Jana Hercogova <br>MD<br><span class="path"><br><br></span></figcaption>
+           <p><img src="images/mem-3.png" width="182" height="182" alt="Prof. Jana Hercogova
+"></p><br>
+           <figcaption>Prof. Jana Hercogova
+<br>MD<br><span class="path"><br><br></span></figcaption>
          </figure>
          <figure class="sign">
-           <p><img src="images/mem-4.png" width="182" height="182" alt="Prof. Mark Lebwohl "></p><br>
-           <figcaption>Prof. Mark Lebwohl <br>MD<br><span class="path"><br><br></span></figcaption>
+           <p><img src="images/mem-4.png" width="182" height="182" alt="Prof. Mark Lebwohl
+"></p><br>
+           <figcaption>Prof. Mark Lebwohl
+<br>MD<br><span class="path"><br><br></span></figcaption>
          </figure>
          <figure class="sign">
-           <p><img src="images/mem-5.png" width="182" height="182" alt="Prof. Robert Schwartz "></p><br>
-           <figcaption>Prof. Robert Schwartz <br>MD<br><span class="path"><br><br></span></figcaption>
+           <p><img src="images/mem-5.png" width="182" height="182" alt="Prof. Robert Schwartz
+"></p><br>
+           <figcaption>Prof. Robert Schwartz
+<br>MD<br><span class="path"><br><br></span></figcaption>
          </figure>
        </div>
        <hr>
@@ -201,72 +211,106 @@
        </div>
        <div class="scientists">
          <figure class="sign">
-           <p><img src="images/mem-6.png" width="141" height="141" alt="Prof. Andrew Alexis "></p><br>
-           <figcaption>Prof. Andrew Alexis <br>MD<br><span class="path">Chair of Scientific <br>Advisory Board</span></figcaption>
+           <p><img src="images/mem-6.png" width="141" height="141" alt="Prof. Andrew Alexis
+"></p><br>
+           <figcaption>Prof. Andrew Alexis
+<br>MD<br><span class="path">Chair of Scientific <br>Advisory Board</span></figcaption>
          </figure>
          <figure class="sign">
-           <p><img src="images/mem-7.png" width="141" height="141" alt="Prof. Hong-Duo Chen "></p><br>
-           <figcaption>Prof. Hong-Duo Chen <br>MD<br><span class="path"><br><br></span></figcaption>
+           <p><img src="images/mem-7.png" width="141" height="141" alt="Prof. Hong-Duo Chen
+"></p><br>
+           <figcaption>Prof. Hong-Duo Chen
+<br>MD<br><span class="path"><br><br></span></figcaption>
          </figure>
          <figure class="sign">
-           <p><img src="images/mem-8.png" width="141" height="141" alt="Prof. Paulo Cunha "></p><br>
-           <figcaption>Prof. Paulo Cunha <br>MD, PhD<br><span class="path"><br><br></span></figcaption>
+           <p><img src="images/mem-8.png" width="141" height="141" alt="Prof. Paulo Cunha
+"></p><br>
+           <figcaption>Prof. Paulo Cunha
+<br>MD, PhD<br><span class="path"><br><br></span></figcaption>
          </figure>
          <figure class="sign">
-           <p><img src="images/mem-9.png" width="141" height="141" alt="Prof. Xing-Hua Gao "></p><br>
-           <figcaption>Prof. Xing-Hua Gao <br>MD<br><span class="path"><br><br></span></figcaption>
+           <p><img src="images/mem-9.png" width="141" height="141" alt="Prof. Xing-Hua Gao
+"></p><br>
+           <figcaption>Prof. Xing-Hua Gao
+<br>MD<br><span class="path"><br><br></span></figcaption>
          </figure>
          <figure class="sign">
-           <p><img src="images/mem-10.png" width="141" height="141" alt="Prof. Andy Goren "></p><br>
-           <figcaption>Prof. Andy Goren <br>MD<br><span class="path"><br><br></span></figcaption>
+           <p><img src="images/mem-10.png" width="141" height="141" alt="Prof. Andy Goren
+"></p><br>
+           <figcaption>Prof. Andy Goren
+<br>MD<br><span class="path"><br><br></span></figcaption>
          </figure>
          <figure class="sign">
-           <p><img src="images/mem-11.png" width="141" height="141" alt="Dr. John Harris "></p><br>
-           <figcaption>Dr. John Harris <br>MD<br><span class="path"><br><br></span></figcaption>
+           <p><img src="images/mem-11.png" width="141" height="141" alt="Dr. John Harris
+"></p><br>
+           <figcaption>Dr. John Harris
+<br>MD<br><span class="path"><br><br></span></figcaption>
          </figure>
          <figure class="sign">
-           <p><img src="images/mem-12.png" width="141" height="141" alt="Dr. Aliya Kassymkhanova "></p><br>
-           <figcaption>Dr. Aliya <br>Kassymkhanova <br>MD<br><span class="path"><br></span></figcaption>
+           <p><img src="images/mem-12.png" width="141" height="141" alt="Dr. Aliya Kassymkhanova
+"></p><br>
+           <figcaption>Dr. Aliya <br>Kassymkhanova
+<br>MD<br><span class="path"><br></span></figcaption>
          </figure>
          <figure class="sign">
-           <p><img src="images/mem-13.png" width="141" height="141" alt="Prof. Konstantin Lomonosov "></p><br>
-           <figcaption>Prof. Konstantin <br>Lomonosov <br>MD<br><span class="path"><br></span></figcaption>
+           <p><img src="images/mem-13.png" width="141" height="141" alt="Prof. Konstantin Lomonosov
+"></p><br>
+           <figcaption>Prof. Konstantin <br>Lomonosov
+<br>MD<br><span class="path"><br></span></figcaption>
          </figure>
          <figure class="sign">
-           <p><img src="images/mem-14.png" width="141" height="141" alt="Prof. Lali Mekokishvili "></p><br>
-           <figcaption>Prof. Lali Mekokishvili <br>MD<br><span class="path"><br><br></span></figcaption>
+           <p><img src="images/mem-14.png" width="141" height="141" alt="Prof. Lali Mekokishvili
+"></p><br>
+           <figcaption>Prof. Lali Mekokishvili
+<br>MD<br><span class="path"><br><br></span></figcaption>
          </figure>
          <figure class="sign">
-           <p><img src="images/mem-15.png" width="141" height="141" alt="Prof. Silvia Moretti "></p><br>
-           <figcaption>Prof. Silvia Moretti <br>MD<br><span class="path"><br><br></span></figcaption>
+           <p><img src="images/mem-15.png" width="141" height="141" alt="Prof. Silvia Moretti
+"></p><br>
+           <figcaption>Prof. Silvia Moretti
+<br>MD<br><span class="path"><br><br></span></figcaption>
          </figure>
          <figure class="sign">
-           <p><img src="images/mem-16.png" width="141" height="141" alt="Dr. Davinder Parsad "></p><br>
-           <figcaption>Dr. Davinder Parsad <br>MD<br><span class="path"><br><br></span></figcaption>
+           <p><img src="images/mem-16.png" width="141" height="141" alt="Dr. Davinder Parsad
+"></p><br>
+           <figcaption>Dr. Davinder Parsad
+<br>MD<br><span class="path"><br><br></span></figcaption>
          </figure>
          <figure class="sign">
-           <p><img src="images/mem-17.png" width="141" height="141" alt="Prof. Mirna Situm "></p><br>
-           <figcaption>Prof. Mirna Situm <br>MD<br><span class="path"><br><br></span></figcaption>
+           <p><img src="images/mem-17.png" width="141" height="141" alt="Prof. Mirna Situm
+"></p><br>
+           <figcaption>Prof. Mirna Situm
+<br>MD<br><span class="path"><br><br></span></figcaption>
          </figure>
          <figure class="sign">
-           <p><img src="images/mem-18.png" width="141" height="141" alt="Prof. Richard Spritz "></p><br>
-           <figcaption>Prof. Richard Spritz <br>MD<br><span class="path"><br><br></span></figcaption>
+           <p><img src="images/mem-18.png" width="141" height="141" alt="Prof. Richard Spritz
+"></p><br>
+           <figcaption>Prof. Richard Spritz
+<br>MD<br><span class="path"><br><br></span></figcaption>
          </figure>
           <figure class="sign">
-           <p><img src="images/mem-19.png" width="141" height="141" alt="Prof. Andrija Stanimirovic "></p><br>
-           <figcaption>Prof. Andrija <br>Stanimirovic <br>MD<br><span class="path"><br></span></figcaption>
+           <p><img src="images/mem-19.png" width="141" height="141" alt="Prof. Andrija Stanimirovic
+"></p><br>
+           <figcaption>Prof. Andrija <br>Stanimirovic
+<br>MD<br><span class="path"><br></span></figcaption>
          </figure>
          <figure class="sign">
-           <p><img src="images/mem-20.png" width="141" height="141" alt="Prof. Robert Schwartz "></p><br>
-           <figcaption>Prof. Robert <br>Schwartz <br>MD<br><span class="path"><br></span></figcaption>
+           <p><img src="images/mem-20.png" width="141" height="141" alt="Prof. Robert Schwartz
+"></p><br>
+           <figcaption>Prof. Robert <br>Schwartz
+<br>MD<br><span class="path"><br></span></figcaption>
          </figure>
          <figure class="sign">
-           <p><img src="images/mem-21.png" width="141" height="141" alt="Prof. Michael Tharp "></p><br>
-           <figcaption>Prof. Michael Tharp <br>MD<br><span class="path"><br><br></span></figcaption>
+           <p><img src="images/mem-21.png" width="141" height="141" alt="Prof. Michael Tharp
+"></p><br>
+           <figcaption>Prof. Michael Tharp
+<br>MD<br><span class="path"><br><br></span></figcaption>
          </figure>
          <figure class="sign">
-           <p><img src="images/mem-22.png" width="141" height="141" alt="Prof. Nino Tsiskarishvili "></p><br>
-           <figcaption>Prof. Nino <br>Tsiskarishvili <br>MD<br><span class="path"><br></span></figcaption>
+           <p><img src="images/mem-22.png" width="141" height="141" alt="Prof. Nino Tsiskarishvili
+"></p><br>
+           <figcaption>Prof. Nino <br>Tsiskarishvili
+<br>MD<br><span class="path"><br></span></figcaption>
          </figure>
       </div>
       <hr>
@@ -280,8 +324,10 @@
        </div>
       <div class="Management">
         <figure class="sign">
-           <p><img src="images/mem-23.png" width="141" height="141" alt="Yan Valle "></p><br>
-           <figcaption>Yan Valle  <br>MSc, MBA<br><span class="path">Visiting Professor, <br>University of Guglielmo <br>Marconi</span></figcaption>
+           <p><img src="images/mem-23.png" width="141" height="141" alt="Yan Valle
+"></p><br>
+           <figcaption>Yan Valle
+ <br>MSc, MBA<br><span class="path">Visiting Professor, <br>University of Guglielmo <br>Marconi</span></figcaption>
          </figure>
          <figure class="sign">
            <p><img src="images/mem-24.png" width="141" height="141" alt="Alina Dickey"></p><br>
@@ -357,7 +403,8 @@
    <footer>
      <div class="row">
       <div class="col-sm-6">
-        <p>© 2010−2018 VR Foundation, Inc. <br> All rights reserved. VR Foundation™, and the “VR Foundation“ logo, <br>are trademarks of VR Foundation, Inc.</p>
+        <p>© 2010−2018 VR Foundation, Inc. <br>
+All rights reserved. VR Foundation™, and the “VR Foundation“ logo, <br>are trademarks of VR Foundation, Inc.</p>
       </div>
       <div class="col-sm-6">
         <div class="col-sm-8">
